# xr-picker

./: .gitignore  .mailmap  CODE_OF_CONDUCT.md  Cargo.lock.license  Cargo.toml  README.md  build.rs  deny.toml
.github/: dependabot.yml
.github/workflows/: binaries.yml  release.yml  rust.yml
.reuse/: dep5
assets/icon/: manifest.xml
images/: xrpicker-linux-screenshot.png.license
src/: lib.rs  linux.rs  manifest.rs  platform.rs  runtime.rs  windows.rs
supply-chain/: audits.toml  audits.toml.license  config.toml
xrpicker-core/: Cargo.toml  README.md
xrpicker-core/src/: app_state.rs  arch_abi.rs  arch_detect.rs  lib.rs  linux.rs  manifest.rs  path_simplifier.rs  platform.rs  runtime.rs  windows.rs
xrpicker-egui/: Cargo.toml  build.rs
xrpicker-egui/src/: main.rs
xrpicker-gui/: Cargo.toml  build.rs
xrpicker-gui/assets/: manifest.xml
xrpicker-gui/src/: main.rs
xrpicker-iced/: Cargo.toml
xrpicker-iced/src/: main.rs
xrpicker-setruntime/: Cargo.toml  build.rs
xrpicker-setruntime/src/: main.rs
