# SPDX-FileCopyrightText: 2022, Collabora, Ltd.
# SPDX-License-Identifier: CC0-1.0

[package]
edition = "2021"
name = "xrpicker"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "4.0.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"

[target.'cfg(unix)'.dependencies]
xdg = "2.4"

[target.'cfg(windows)'.dependencies]
# registry = "1.2.2"
winreg = "0.10"
special-folder = "0.2"
