# SPDX-FileCopyrightText: 2022, Collabora, Ltd.
# SPDX-License-Identifier: CC0-1.0

[package]
edition = "2021"
homepage = "https://github.com/rpavlik/xr-picker"
name = "xrpicker"
version = "0.1.0"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "4.0.1"
eframe = {version = "0.19", features = ["persistence"]}
egui-winit = "0.19"
image = "0.24.4"
itertools = "0.10"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"

[target.'cfg(unix)'.dependencies]
xdg = "2.4"

[target.'cfg(windows)'.dependencies]
iswow64 = "0.1.0"
special-folder = "0.2"
winreg = "0.10"
