# SPDX-FileCopyrightText: 2022-2024, Collabora, Ltd.
# SPDX-License-Identifier: CC0-1.0

[package]
authors = ["Rylie Pavlik <rylie.pavlik@collabora.com>"]
categories = ["config"]
description = "Core functionality of enumerating OpenXR runtimes, identifying the active runtime, and updating the active runtime"
edition = "2021"
homepage = "https://github.com/rpavlik/xr-picker"
license = "MIT OR Apache-2.0"
name = "xrpicker"
repository = "https://github.com/rpavlik/xr-picker"
version = "2.2.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0"
itertools = "0.13.0"
object = "0.36.5"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "2.0.3"

[target.'cfg(unix)'.dependencies]
xdg = "2.5"

[target.'cfg(windows)'.dependencies]
iswow64 = "0.1.0"
special-folder = "0.2"
winreg = "0.52.0"
