# SPDX-FileCopyrightText: 2022-2023, Collabora, Ltd.
# SPDX-License-Identifier: CC0-1.0

[package]
authors = ["Ryan Pavlik <ryan.pavlik@collabora.com>"]
description = "Choose your active OpenXR runtime in a friendly graphical interface"
edition = "2021"
homepage = "https://github.com/rpavlik/xr-picker"
license = "MIT OR Apache-2.0"
name = "xrpicker-gui"
readme = "../README.md"
repository = "https://github.com/rpavlik/xr-picker"
version = "2.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = {version = "0.22.0", features = ["persistence"]}
egui-winit = {version = "0.22.0", default-features = false}
image = {version = "0.24.5", default-features = false, features = ["png"]}
itertools = "0.11.0"
rfd = "0.11.2"
xrpicker = {path = "../xrpicker-core", version = "2.2.0"}

# To add icon to EXE
[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[target.'cfg(linux)'.dependencies]
# Only need wayland support on linux
egui-winit = {version = "0.22.0", default-features = false, features = ["wayland"]}

[package.metadata.winres]
LegalCopyright = "Copyright © 2022-2023, Collabora, Ltd."
OriginalFilename = "xrpicker-gui.exe"
