# SPDX-FileCopyrightText: 2022-2025, Collabora, Ltd.
# SPDX-License-Identifier: CC0-1.0

[package]
authors = ["Rylie Pavlik <rylie.pavlik@collabora.com>"]
description = "Choose your active OpenXR runtime in a friendly graphical interface"
edition = "2021"
homepage = "https://github.com/rpavlik/xr-picker"
license = "MIT OR Apache-2.0"
name = "xrpicker-gui"
readme = "../README.md"
repository = "https://github.com/rpavlik/xr-picker"
version = "2.3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.32.0", features = ["persistence"] }
egui-winit = { version = "0.32.2", default-features = false }
image = { version = "0.25.1", default-features = false, features = ["png"] }
itertools = "0.14.0"
rfd = "0.15.0"
xrpicker = { path = "../xrpicker-core", version = "2.3.0" }

wgpu = "25" # enables the wgpu default features so we get the default backends

# To add icon to EXE
[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[target.'cfg(linux)'.dependencies]
# Only need wayland support on linux
egui-winit = { version = "0.32.0", default-features = false, features = [
    "wayland",
] }

[package.metadata.winres]
LegalCopyright = "Copyright © 2022-2025, Collabora, Ltd."
OriginalFilename = "xrpicker-gui.exe"
